verificação de alguns erros